deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-prueba-k8s
  labels:
    app: prueba-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prueba-k8s
  template:
    metadata:
      labels:
        app: prueba-k8s
    spec:
      volumes:
        - name: volumen-k8s
          persistentVolumeClaim:
            claimName: pvc-k8s
      containers:
      - image: josemanuel4fernandez/prueba_k8s:v2
        name: contenedor-prueba-k8s
        ports:
        - name: puertok8s
          containerPort: 5002
